# CSocketMFC

./: CMakeLists.txt  client  client.cpp  client_udp  client_udp.cpp  server  server.cpp  server_udp  server_udp.cpp
include/: CAsyncSocket.h  CSocket.h  Test.h  debug.h  structures.h  types.h
javaproj/: JNICAsyncSocket.h  JNICAsyncSocket.java  JNITest.java  MainJNI.java  MainJNI2.java  Makefile  T_TEST_1.java  T_TEST_2.java  generate.sh  generate_cpp.py  generate_cpp.sh  generate_native.py  generate_native.sh  generate_struct.py  generate_struct.sh  generate_temp.sh  helper.h  libcasyncsocket_jni.cpp  replacement_variable.py  result.cpp  run.sh  run2.sh
src/: CAsyncSocket.cpp  CSocket.cpp  Makefile  Test.cpp
